2007-05-18  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Changed the hidden delete button to just allow
	  a right-click on the group button.  Still need to implement a
	  little popup menu, but for now, you can delete a group by
	  right-clicking on it.

2007-05-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped the version to 0.1.4 for the next iteration

2007-05-18  Boyd Timothy <btimothy@gmail.com> 

	* README, NEWS: Updated for 0.1.3 release.

2007-05-18  Calvin Gaisford <calvinrg@gmail.com> 

	* data/Themes/Makefile.am: Added missing extra dist files
	* Banter/Makefile.am: Added missing Extra dist files

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Stubbed out some code for getting/setting our
	  own status in the GroupWindow.  This isn't functional yet, just a
	  start.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/PersonGroup.cs: Create a TreeStore even in the case where the
	  group is created w/o a real EDS Contact so that UpdateModel doesn't
	  blow chunks when a user creates a new group.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Added code to allow the user to delete a
	  group.

2007-05-17  Calvin Gaisford <calvinrg@gmail.com> 

	* data/banter.desktop.in: Added a desktop file for the banter
	  application
	* data/Makefile.am: updated the Makefile to handle the
	  banter.application file

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/HIGMessageDialog.cs: Modified so that the ExtraWidget gets
	  placed in-line with the message text.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Started the code to add a new group.  The new
	  group is being added, but for some reason it's crashing.
	* Banter/HIGMessageDialog.cs: Allow an extra widget to be placed in the
	  dialog.  This still needs to be cleaned up so it aligns to the
	  right of the dialog image.  It's at least "functional" though.
